# dream

./: pyproject.toml
src/: __init__.py  __main__.py  config.py  keyboards.py  prompts.json
src/commands/: __init__.py  search.py  start.py
src/database/: __init__.py  business.py  product.py  supplier.py  user.py
src/middlewares/: __init__.py
src/prompts/business/: is_unique_idea.txt
src/tools/: ai.py  search.py  test.py
